--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
   "singleQuote": true,
-  "trailingComma": "es5",
+  "tabWidth": 4,
+  "semi": false,
+  "trailingComma": "none",
   "arrowParens": "avoid",
-  "printWidth": 80
+  "printWidth": 110
 }
