--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "union-find-ts",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "An immutable Union-Find structure.",
-  "exports": "./lib/src/index.js",
+  "main": "./lib/src/index.js",
   "files": [
     "lib/**/*"
   ],
