--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "union-find-ts",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "An immutable Union-Find structure.",
   "main": "./lib/src/index.js",
   "files": [
     "lib/**/*"
   ],
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf ./lib/",
