--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "union-find-ts",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "An immutable Union-Find structure.",
   "main": "./lib/src/index.js",
   "files": [
@@ -32,7 +32,10 @@
   "engines": {
     "node": ">=12.0"
   },
-  "keywords": ["typescript", "union-find" ],
+  "keywords": [
+    "typescript",
+    "union-find"
+  ],
   "bugs": {
     "url": "https://github.com/tylergannon/union-find-ts/issues"
   },
@@ -41,6 +44,7 @@
     "@ryansonshine/commitizen": "^4.2.8",
     "@ryansonshine/cz-conventional-changelog": "^3.3.4",
     "@types/jest": "^28.1.1",
+    "@types/jsdom": "^16.2.14",
     "@types/node": "^17.0.42",
     "@types/ramda": "^0.28.14",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
